--- a/contrib/gitian-descriptors/gitian-win32.yml
+++ b/contrib/gitian-descriptors/gitian-win32.yml
@@ -1,5 +1,5 @@
 ---
-name: "bitcoin"
+name: "bitcoinomg"
 suites:
 - "lucid"
 architectures:
@@ -12,8 +12,8 @@ packages:
 - "faketime"
 reference_datetime: "2011-01-30 00:00:00"
 remotes:
-- "url": "https://github.com/bitcoin/bitcoin.git"
-  "dir": "bitcoin"
+- "url": "https://github.com/litecoin-project/bitcoinomg.git"
+  "dir": "bitcoinomg"
 files:
 - "qt-win32-4.8.3-gitian-r1.zip"
 - "boost-win32-1.50.0-gitian2.zip"
@@ -43,7 +43,7 @@ script: |
   #
   find -type f | xargs touch --date="$REFERENCE_DATETIME"
   #
-  cd bitcoin
+  cd bitcoinomg
   mkdir -p $OUTDIR/src
   git archive HEAD | tar -x -C $OUTDIR/src
   cp $OUTDIR/src/doc/README_windows.txt $OUTDIR/readme.txt
